--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Aqui aria el titulo de la pagina</h1>
-</body>
+
+    <h2>Aqui aria el titulo de la pagina</h2>
+    
+    </body>
+
+
 </html>
