--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Aqui aria el titulo de la pagina</h1>
 
     <h2>Aqui aria el titulo de la pagina</h2>
-    
+    <p>segundo parrafo</p>
     </body>
 
 
